Removed large inset box-shadow from demo page, as it was causing performance issues on Firefox, and even more severely in Safari.

--- a/demo.css
+++ b/demo.css
@@ -13,8 +13,9 @@ body {
 	border-style: solid;
 	border-color: #DDDDDD #CCC #CCC #DDDDDD;
 	padding: 1em 2.5em 1em 2em;
-	box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3),
-		0 -30px 200px rgba(32, 20, 0, 0.2) inset;
+	-webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
+	box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
+		/*0 -30px 200px rgba(32, 20, 0, 0.2) inset;*/
 	border-radius: 7px;
 }
 
@@ -91,19 +92,53 @@ li {
 	margin-bottom: 1em;
 }
 
+.gallery {
+	overflow: auto;
+}
+
 .gallery a {
 	display: inline-block;
-	text-align: center;
-	border-width: 1px;
-	border-style: solid;
-	padding: 10px;
-	margin: 10px;
 	vertical-align: middle;
+	position: relative;
+
+	border-radius: 5px;
+	border-style: solid;
+	border-width: 1px;
+	margin: 15px 5px;
+	padding: 0.5em;
+
+	top: 0;
+
+	color: #333;
+	background-color: #EEE;
+	border-color: #FFF #CCC #CCC #FFF;
+	-webkit-box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
+	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
+	font-weight: normal;
+	font-size: 12px;
+	min-width: 102px;
+
+	text-align: center;
 	text-decoration: none;
+
+	-o-transition: all .05s linear;
+	-moz-transition: all .05s linear;
+	-webkit-transition: all .05s linear;
+	transition: all .05s linear;
+}
+
+.gallery a:hover {
+	-webkit-box-shadow: 0 6px 7px rgba(0, 0, 0, 0.25);
+	box-shadow: 0 6px 7px rgba(0, 0, 0, 0.25);
+	top: -3px;
+	color: #000;
+	text-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
 }
 
 .gallery a img {
 	display: block;
 	margin: 0 auto 0.5em auto;
-	border: none;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #CCC #FFF #FFF #CCC;
 }
